NetBSD Problem Report #45299

From nakayosh@leto.eonet.ne.jp  Fri Aug 26 15:29:00 2011
Return-Path: <nakayosh@leto.eonet.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id EE19563BAC3
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 26 Aug 2011 15:28:59 +0000 (UTC)
Message-Id: <20110826152854.CB3B11AF2B7@ae0000-mailauth14.eo.k-opti.ad.jp>
Date: Sat, 27 Aug 2011 00:28:54 +0900 (JST)
From: nakayosh@leto.eonet.ne.jp
Reply-To: nakayosh@leto.eonet.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: fsck_lfs misreports fbmask
X-Send-Pr-Version: 3.95

>Number:         45299
>Category:       bin
>Synopsis:       fsck_lfs misreports fbmask
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Aug 26 15:30:00 +0000 2011
>Closed-Date:    Mon Aug 29 18:46:23 +0000 2011
>Last-Modified:  Mon Aug 29 18:46:23 +0000 2011
>Originator:     NAKAJIMA Yoshihiro
>Release:        NetBSD-current/20110826
>Organization:
>Environment:
System: NetBSD asura 5.99.55 NetBSD 5.99.55 (ASURA) #6: Fri Aug 26 20:48:08 JST 2011 nakayosh@asura:/usr/src/sys/arch/amd64/compile/ASURA amd64
Architecture: x86_64
Machine: amd64
>Description:
	fsck_lfs misreports fbmask.
>How-To-Repeat:
>Fix:
diff -u src/sbin/fsck_lfs/setup.c.ORIG src/sbin/fsck_lfs/setup.c
--- src/sbin/fsck_lfs/setup.c.ORIG	2010-02-17 08:20:30.000000000 +0900
+++ src/sbin/fsck_lfs/setup.c	2011-08-27 00:15:24.000000000 +0900
@@ -367,8 +367,8 @@
 		}
 	}
 	if (fs->lfs_fbmask != (1 << fs->lfs_fbshift) - 1) {
-		pwarn("INCORRECT FFMASK=%" PRId64 " IN SUPERBLOCK",
-		    fs->lfs_ffmask);
+		pwarn("INCORRECT FBMASK=%" PRId64 " IN SUPERBLOCK",
+		    fs->lfs_fbmask);
 		fs->lfs_fbmask = (1 << fs->lfs_fbshift) - 1;
 		if (preen)
 			printf(" (FIXED)\n");

>Release-Note:

>Audit-Trail:
From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45299 CVS commit: src/sbin/fsck_lfs
Date: Mon, 29 Aug 2011 18:43:21 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Mon Aug 29 18:43:20 UTC 2011

 Modified Files:
 	src/sbin/fsck_lfs: setup.c

 Log Message:
 PR bin/45299: print FBMASK not FFMASK when lfs_fbmask is incorrect.


 To generate a diff of this commit:
 cvs rdiff -u -r1.37 -r1.38 src/sbin/fsck_lfs/setup.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: bouyer@NetBSD.org
State-Changed-When: Mon, 29 Aug 2011 18:46:23 +0000
State-Changed-Why:
Patch commited, thanks !


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.