PR bin/45299: print FBMASK not FFMASK when lfs_fbmask is incorrect.